# tokstr-rs

./: Cargo.toml  LICENSE  Makefile
scripts/: ffmpeg_build_android_on_mac.sh
src/: bridge.rs  lib.rs  main.rs  main_axum.rs
src/app/: state.rs
src/dashboard/: dashboard.html
src/discovery/: fetchers.rs  mod.rs  models.rs  parsers.rs
src/download/: manager.rs
src/ffmpeg-extractor/: Cargo.toml  build.rs
src/ffmpeg-extractor/c_src/: extract_jpeg_frame.c  extract_jpeg_frame.h  wrapper.h
src/ffmpeg-extractor/src/: lib.rs
src/handlers/: handlers.rs
src/models/: models.rs
src/service/: main_axum.rs  mod.rs  playlist.rs  state.rs
src/utils/: log.rs  mod.rs  utils.rs
